--- a/public/index.html
+++ b/public/index.html
@@ -42,15 +42,15 @@
 
             <div id="buttons_div">
                 <div class="cardDiv">
-                    <button id="check" class="pokerBtn">CHECK</button>
-                    <button id="raise" class="pokerBtn">RAISE</button>
+                    <button id="check" class="pokerBtn" disabled>CHECK</button>
+                    <button id="raise" class="pokerBtn" disabled>RAISE</button>
                 </div>
             </div>
             <div id="card_holder">
                 <img src="" class="card" alt="">
                 <img src="" class="card" alt="">
             </div>
-            <button id="fold" class="pokerBtn" onclick="fold()">FOLD</button>
+            <button id="fold" class="pokerBtn" onclick="fold()" disabled>FOLD</button>
         </div>
     </div>
 </body>
