--- a/public/gamecreate.html
+++ b/public/gamecreate.html
@@ -12,7 +12,7 @@
             <img src="bilder/user.png" alt="login icon" class="headerImg">
         </a>
         <a href="games.html">
-            <h2 id="title">POKER</h2>
+            <h2 id="title">GAMES</h2>
         </a>
         <h2 id="pot">0</h2>
         <h2 id="playerBalance">1000</h2>
